--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
   <version>1.0</version>
   <packaging>jar</packaging>
   <name>Message Utility Java Sample App</name>
+  <properties>
+      <jacoco.version>0.8.6</jacoco.version>
+      <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+      <sonar.dynamicAnalysis>requestReports</sonar.dynamicAnalysis>
+      <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+      <sonar.language>java</sonar.language>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,6 +21,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>	
+    <dependency>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.8.6</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -22,6 +34,27 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
       </plugin>
+
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>jacoco.version</version>
+        <executions>
+            <execution>
+                <id>jacoco-initialize</id>
+                <goals>
+                    <goal>prepare-agent</goal>
+                </goals>
+            </execution>
+            <execution>
+                <id>jacoco-site</id>
+                <phase>package</phase>
+                <goals>
+                    <goal>report</goal>
+                </goals>
+            </execution>
+        <executions>
+      </plugin>  
     </plugins>
   </build>
 </project>
